# yaddak-encounter

./: .env  .gitignore  Cargo.toml  FILLME.env  docker-compose.yml  monsters.json  yaddak_encounter_certificate.pem  yaddak_encounter_csr.pem  yaddak_encounter_private_key.pem
scripts/: monsters.json  monsters_serde.py
src/: main.rs
src/api/: mod.rs  user_controller.rs
src/models/: detailed_response.rs  errors.rs  mod.rs  monsters.rs  state.rs  user.rs
src/traits/: mod.rs  repo.rs
src/utilities/: headers.rs
